# packsim

./: .gitignore  README.md  README.rst  build.sh  check_width_exists.py  convert_old.py  packsim.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  shrink_energy_comparison.py  simulation.py  test_sim.json
docs/source/: conf.py  index.rst  installation.rst  scripts.rst  usage.rst
docs/source/assets/: test_sim.json
packsim/: __init__.py
packsim/scripts/: simulate.py
scripts/: aspect_diagrams.py  check_width_exists.py  coercion.py  coercivity.py  continuation.py  convergence.py  cumulative_cell_vee.py  cumulative_vee.py  cumulative_vee_2.py  defect_energy.py  defect_scatter.py  defectenergy.py  defects.py  density_of_states.py  frustration.py  frustration_alpha.py  frustration_n.py  heatmap.py  hexagon_alpha.py  maxcenter.py  min_order_vee.py  near_neighbors.py  ordered_rbar.py  ordered_scatter.py  perturbations.py  probability_of_disorder.py  rbar.py  script_tools.py  torus.py  torus_img.py  torus_mesh.py  vee.py  vee_diff_pod.py  vor_test.py  width_diagrams.py
squish/: common.py  core.c  core.pxd  core.pyx  diagram.py  energy.c  energy.pyx  ordered.py  simulation.py  voronoi.c  voronoi.pxd  voronoi.pyx
squish/_squish/: _squish.c  _squish.pxd  energy.pyx  voronoi_dcel.pyx
squish/scripts/: shrink_energy_comparison.py  simulate.py  width_diagrams.py
src/: _packsim.c  _squish.c  core.pyx  energy.pyx  packsim_core.c  packsim_core.pxd  packsim_core.pyx  setup.py  voronoi_dcel.pyx
src/_squish/: _squish.c  energy.pyx  voronoi_dcel.pyx
src/squish/: __init__.py  common.py  diagram.py  simulation.py  squish.py
