[metadata]
name = squish-ksjdragon
version = 0.1
author = Kenneth Jao
author_email = ksjdragon@gmail.com
description = squish is Python program which perform simulations for the flow of 'soft' or 'compressible' objects under some energy in a periodic domain.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksjdragon/squish
project_urls =
	Bug Tracker = https://github.com/ksjdragon/squish/issues
classifiers =
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
	= squish
packages = find:
python_requires = >= 3.8
install_requires =
	numpy == 1.21.2
	scipy == 1.7.1
	matplotlib == 3.4.3

[options.packages.find]
where = squish

[options.entry_points]
console_scripts =
	simulate = squish.scripts.simulate:main
	shrink_energy_comparison = squish.scripts.shrink_energy_comparison:main